--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
     "immutable": "^3.8.1",
+    "jquery": "^3.2.1",
+    "prettify": "^0.1.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-immutable": "^4.0.0",
@@ -45,6 +46,7 @@
     "express": "^4.16.3",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
+    "prettier": "1.14.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "sass-loader": "^6.0.6",
