--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "webpack": "webpack --config=webpack.config.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-brands-svg-icons": "^5.4.1",
+    "@fortawesome/free-regular-svg-icons": "^5.4.1",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^3.3.7",
+    "i": "^0.3.6",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
+    "npm": "^6.4.1",
     "prettify": "^0.1.7",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -21,6 +28,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-social-media-icons": "^1.0.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-immutable": "^4.0.0",
@@ -28,6 +36,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -49,6 +59,7 @@
     "prettier": "1.14.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-social-icons": "^3.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.9",
