--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   },
   "scripts": {
     "start": "babel-node ./src/server/server.js ",
-    "webpack": "webpack --config=webpack.config.js"
+    "webpack": "webpack --mode development --config=webpack.config.js",
+    "server": "nodemon --watch server --exec babel-node -- ./src/server/server.js",
+    "dev": "webpack --mode development"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
@@ -14,10 +16,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^3.3.7",
     "i": "^0.3.6",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
+    "nodemon": "^1.18.4",
     "npm": "^6.4.1",
     "prettify": "^0.1.7",
     "prop-types": "^15.6.2",
@@ -48,21 +50,25 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-watch": "^2.0.7",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.11",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^2.10.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^2.6.2",
     "express": "^4.16.3",
-    "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
+    "extract-text-webpack-plugin": "v4.0.0-alpha.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.4",
     "prettier": "1.14.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-social-icons": "^3.0.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.9",
-    "webpack": "^2.7.0"
+    "webpack": "4.22.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0"
   }
 }
