--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.0",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-scroll-to-component": "^1.0.2",
     "react-social-media-icons": "^1.0.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
