--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "body-parser": "^1.18.3",
     "i": "^0.3.6",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
